<resources>
    <string name="app_name">Dia da Arte</string>
    <string name="titulo_1programacao">Programação</string>
    <string name="titulo_2expo">Exposição</string>
    <string name="titulo_3concerto">Concerto</string>
    <string name="titulo_4audicao">Dicas de apreciação</string>
    <string name="titulo_5palestra">Palestra magna</string>
    <string name="titulo_6sobre">Saiba mais</string>
    <string name="menu_1programacao"><b>Programação</b></string>
    <string name="menu_2expo"><b>Exposição</b></string>
    <string name="menu_3concerto"><b>Concerto</b></string>
    <string name="menu_4audicao"><b>Dicas de\napreciação</b></string>
    <string name="menu_5palestra"><b>Palestra\nmagna</b></string>
    <string name="menu_6sobre"><b>Saiba\nmais</b></string>
    <string name="programacao_item1_hora">16h</string>
    <string name="programacao_item2_hora">17h30</string>
    <string name="programacao_item3_hora">19h</string>
    <string name="programacao_item4_hora">20h</string>
    <string name="programacao_item1_titulo">Exposição</string>
    <string name="programacao_item2_titulo">Audição Comentada</string>
    <string name="programacao_item3_titulo">Palestra Magna</string>
    <string name="programacao_item4_titulo">Concerto</string>
    <string name="programacao_item1_descricao">“Conhecendo os Clássicos da Humanidade”: A expressão
        dos princípios da natureza na Arte</string>
    <string name="programacao_item2_descricao">"O Lago dos Cisnes" com o formador de plateias
        Leandro Botelho e participação especial do Ballet Hugo Bianchi</string>
    <string name="programacao_item3_descricao">"Arte: Caminhos para a Harmonia" com a diretora da
        Nova Acrópole Fortaleza, Kelly Aguiar</string>
    <string name="programacao_item4_descricao">Apresentação musical com a Orquestra Jovem da OSUECE</string>
    <string name="exposicao_arte1_nome">Arquitetura</string>
    <string name="exposicao_arte2_nome">Escultura</string>
    <string name="exposicao_arte3_nome">Pintura</string>
    <string name="exposicao_arte4_nome">Literatura</string>
    <string name="exposicao_arte5_nome">Artes cênicas</string>
    <string name="exposicao_arte6_nome">Música</string>
    <string name="exposicao_arte1_obra1">A Grande Pirâmide</string>
    <string name="exposicao_arte1_obra2">Parthenon</string>
    <string name="exposicao_arte1_obra3">Notre Dame de Paris</string>
    <string name="exposicao_arte2_obra1">Vitória de Samotrácia</string>
    <string name="exposicao_arte2_obra2">Exército de Terracota</string>
    <string name="exposicao_arte2_obra3">O Pensador</string>
    <string name="exposicao_arte3_obra1">A Primavera, de Botticelli</string>
    <string name="exposicao_arte3_obra2">Pintura Impressionista</string>
    <string name="exposicao_arte3_obra3">Pintura Japonesa</string>
    <string name="exposicao_arte4_obra1">Dom Quixote</string>
    <string name="exposicao_arte4_obra2">Odisseia</string>
    <string name="exposicao_arte4_obra3">O Profeta</string>
    <string name="exposicao_arte5_obra1">Dança indiana</string>
    <string name="exposicao_arte5_obra2">Teatro Shakespeariano</string>
    <string name="exposicao_arte5_obra3">Ballet</string>
    <string name="exposicao_arte6_obra1">Música indiana</string>
    <string name="exposicao_arte6_obra2">Música clássica ocidental</string>
    <string name="exposicao_arte1_obra1_texto">Ainda que nos seja impossível saber com certeza
        como os arquitetos egípcios idealizaram e executaram essas obras monumentais, todos nós
        aplaudimos os gênios que se escondem por detrás destas obras... E seguimos buscando
        algumas pistas sobre os instrumentos que utilizaram. A notável beleza da pirâmide de Gizé
        se baseia em sua relação com a proporção áurea. Cada face está exatamente orientada para
        um dos pontos cardeais. A relação entre as faces da pirâmide e sua altura é uma razão
        áurea.</string>
    <string name="exposicao_arte1_obra2_texto">Construído entre 447 e 438 aC e dedicado a
        Atena, a deusa patronesse de Atenas, o templo tem 8 colunas nos lados mais estreitos e 17
        colunas em cada um dos lados mais largos. O célebre escultor ateniense Fídias usou as
        proporções áureas para a criação das obras presentes no Parthenon.</string>
    <string name="exposicao_arte1_obra3_texto">As construções das igrejas medievais tiveram um
        desenho muito similar às obras gregas, tendo belas proporções perfeitamente estudadas. A
        Catedral de Notre Dame de Paris, situada na parte oriental da Ile de Cité, na capital da
        França, foi consagrada a Maria e, por isso, chamam-na de Notre Dame. É uma das catedrais
        mais famosas da Idade Média e provavelmente a representante mais conhecida da arte gótica
        francesa. Sua fachada ocidental está harmoniosamente desenhada de acordo com a proporção
        áurea e seus vitrais transmitiam mensagem a quem não sabia ler.</string>
    <string name="exposicao_arte2_obra1_texto">Representação de Niké, a Deusa da Vitória, a estátua
        originalmente tinha cabeça e braços, com a mão elevada em um gesto de saudação. Esta
        estátua maciça, de aspecto tão leve, ficava numa fonte sobre um promotório em forma de
        navio, provavelmente em comemoração a uma batalha náutica. Foi esculpida por volta do ano
        200 aC. Seus pedaços foram encontrados em 1863 nas ruínas do Santuário dos Grandes Deuses
        de Samotrácia, na Grécia. Hoje, é um dos maiores destaques do Museu do Louvre.</string>
    <string name="exposicao_arte2_obra2_texto">O Exército de Terracota é uma coleção de esculturas
        de finalidade funerária enterradas junto com o imperador Qin Shi Huang, o primeiro
        imperador da dinastia Qin, em 210 aC. A obra monumental conta com cerca de 7 mil soldados,
        além de carruagens e cavalos, enterrados a 4m de profundidade, em filas que reproduziam
        formações militares completas.</string>
    <string name="exposicao_arte2_obra3_texto">Em 1880, Rodin esculpe A Porta do Inferno, uma
        representação da obra A Divina Comédia, de Dante Aliglieri. Na parte de cima da Porta do
        Inferno, ele esculpe O Pensador,  que seria o próprio Dante refletindo sobre o querer ou
        não viver uma vida que termine neste portal. A obra é uma ode à Filosofia, ao ser humano
        que se propõe a aprender a pensar para fazer as escolhas mais acertadas em sua vida, ao
        homem que busca a sabedoria.</string>
    <string name="exposicao_arte3_obra1_texto">Com mais de 3 metros de largura, este é um
        quadro-síntese do movimento neoplatônico que sacudiu o renascimento italiano. A Primavera,
        no lado direito, representa a alma humana que desperta para o mundo espiritual. No centro,
        temos Vênus, a deusa do amor, como o eixo de tudo.</string>
    <string name="exposicao_arte3_obra2_texto">Monet realizou uma série de pinturas com o mesmo
        tema mostrando a luz e seus efeitos nas diferentes estações do ano e horas do dia. Ele
        enfatiza, através das pinceladas, o contraste das cores complementares, e manipula o
        conhecimento das cores para fazer parecer que estamos olhando algo vivo.</string>
    <string name="exposicao_arte3_obra3_texto">Esta pintura, conhecida como Apreciadores de
        Plátano, apresenta algumas pessoas admirando os plátanos ao lado do rio Takao Kiyotaki.
        Embora esta pintura seja relativamente atual, pois foi feita em 1557, rendeu-se ao estilo
        tradicional da arte japonesa, pertence à escola Kano, umas das mais importantes escolas de
        pintura do Japão, fundada por Kano Masanobo.</string>
    <string name="exposicao_arte4_obra1_texto">Dom Quixote decide tornar-se um cavaleiro andante e
        parte pelo mundo para viver o seu próprio romance de cavalaria, em companhia de Sancho
        Pança, seu fiel amigo e escudeiro. Cervantes deixa traçado para toda a humanidade, com seu
        personagem genial, o ideal cavalheiresco comum a todos os povos e a todas as épocas. Sua obra
        é, na verdade, a vitória e a perpetuação da cavalaria entre nós. “A via da virtude,
        restrita e trabalhosa, termina em vida, e não em uma vida que se acaba, mas na vida que
        não terá fim.”</string>
    <string name="exposicao_arte4_obra2_texto">A Odisseia relata a história do herói Ulisses ou
        Odisseu, que lutou 10 anos na Guerra de Troia e ajudou a vencê-la com a ideia do Cavalo
        de Troia; depois, vagou pelos mares por mais 10 anos como um castigo por ter desafiado os
        deuses. Quando reconheceu que os homens sem os deuses nada são, conseguiu voltar para seu
        reino, Ítaca, para junto de sua esposa e filho e, juntos, com a ajuda dos deuses,
        devolveram a paz à cidade. Carrega o símbolo do retorno do homem à sua origem, à sua
        essência.</string>
    <string name="exposicao_arte4_obra3_texto">O Profeta é a obra mais famosa do poeta libanês
        Khalil Gibran. É um livro que atrai não somente pelo estilo, mas também pela filosofia de
        alto nível contida nele. Seu pensamento faz coro aos clássicos da filosofia do ocidente e
        do oriente. O livro conta a história do profeta Al Mustafá, que compartilha sua sabedoria
        com os moradores de Orphalese.</string>
    <string name="exposicao_arte5_obra1_texto">A dança clássica indiana é uma linguagem que busca
        unir o homem à sua essência divina. Acredita-se que ela teve origem há seis mil anos. Ao
        longo da história, a dança clássica indiana buscou manter e divulgar a tradição hindu,
        constituindo-se em um estilo de vida pautado pela vivência de valores universais e
        atemporais.</string>
    <string name="sobre_na_titulo">Nova Acrópole</string>
    <string name="sobre_na_descricao">Nova Acrópole é uma organização internacional filosófica,
        presente em mais de 50 países há 60 anos, que tem por objetivo desenvolver em cada ser
        humano aquilo que ele tem de melhor por meio da filosofia, da cultura e do voluntariado.\n\n
        Com seu Curso de Filosofia Prática, adaptado para mais de 30 línguas e sem qualquer
        distinção de idade, condição social, posição política ou religiosa, Nova Acrópole tem
        beneficiado milhares de pessoas em todo o mundo que buscam conhecer-se, desenvolver-se e
        contribuir com a criação de um mundo melhor.</string>
    <string name="sobre_dda_titulo">Dia da Arte</string>
    <string name="sobre_dda_descricao">O Dia da Arte é comemorado anualmente pela escola de filosofia Nova
        Acrópole, em todas as suas sedes pelo país, com o objetivo de relembrar como o cultivo da
        arte à maneira clássica pode ser um caminho para o homem encontrar a harmonia interior.\n\n
        Neste ano, o Cineteatro São Luiz foi o palco escolhido em Fortaleza para receber o evento,
        tendo como tema central “Arte: Caminhos para a Harmonia”.</string>
    <string name="sobre_na_fort">Fortaleza</string>
    <string name="sobre_na_fort_sul">Fortaleza Sul</string>
    <string name="sobre_na_mail"><u>fortaleza@acropole.org.br</u></string>
    <string name="sobre_na_site"><u>http://www.acropole.org.br/brasil/sedes/ceara/fortaleza.html</u></string>
    <string name="sobre_na_site_sul"><u>http:/www.acropole.org.br/brasil/sedes/ceara/fortaleza-sul.html</u></string>
    <string name="sobre_na_localizacao_endereco">Rua Vicente Leite, 2451, Dionísio Torres, Fortaleza</string>
    <string name="sobre_na_localizacao_endereco_sul">Rua Antenor Rocha Alexandre, 330, Parque Manibura, Fortaleza</string>
    <string name="sobre_dda_localizacao_titulo">Como chegar no evento</string>
    <string name="sobre_dda_localizacao_endereco">Cineteatro São Luiz - Rua Major Facundo, 500 - Centro, Fortaleza - CE, 60025-130</string>
</resources>