<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/cardMarginVertical"
        android:layout_marginLeft="@dimen/cardMarginHorizontal"
        android:layout_marginRight="@dimen/cardMarginHorizontal"
        android:layout_marginTop="@dimen/cardMarginVertical"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                style="@style/SobreTitleText"
                android:text="@string/sobre_na_titulo" />

            <TextView
                style="@style/SobreText"
                android:text="@string/sobre_na_descricao" />

            <TextView
                style="@style/SobreTitleText"
                android:text="@string/sobre_dda_titulo" />

            <TextView
                style="@style/SobreText"
                android:text="@string/sobre_dda_descricao" />

            <TextView
                android:layout_marginTop="10dp"
                style="@style/SobreTitleText"
                android:text="@string/sobre_dda_localizacao_titulo" />

            <TextView
                style="@style/SobreText"
                android:paddingBottom="10dp"
                android:text="@string/sobre_dda_localizacao_endereco" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/cardview_shadow_start_color"/>

            <TextView
                style="@style/SobreTitleText"
                android:paddingTop="0dp"
                android:text="@string/sobre_na_fort" />
            <TextView
                style="@style/SobreText"
                android:text="@string/sobre_na_site" />
            <TextView
                style="@style/SobreText"
                android:text="@string/sobre_na_mail" />
            <TextView
                style="@style/SobreText"
                android:text="@string/sobre_na_telefone" />
            <TextView
                style="@style/SobreText"
                android:text="@string/sobre_na_localizacao_endereco" />

            <LinearLayout
                android:id="@+id/layoutRedesSociais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/image_facebook"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_facebook" />

                <ImageButton
                    android:id="@+id/image_insta"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_instagram" />

                <ImageButton
                    android:id="@+id/image_youtube"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_youtube" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/cardview_shadow_start_color"/>

            <TextView
                style="@style/SobreTitleText"
                android:paddingTop="0dp"
                android:text="@string/sobre_na_fort_sul" />
            <TextView
                style="@style/SobreText"
                android:text="@string/sobre_na_site_sul" />
            <TextView
                style="@style/SobreText"
                android:text="@string/sobre_na_telefone_sul" />
            <TextView
                style="@style/SobreText"
                android:text="@string/sobre_na_localizacao_endereco_sul" />

            <LinearLayout
                android:id="@+id/layoutRedesSociaisSul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/image_facebook_sul"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_facebook" />

                <ImageButton
                    android:id="@+id/image_insta_sul"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/icon_instagram" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>